<resources>
    <string name="app_name">Edge Fintrack</string>
    <string name="enter_emai_Customer">Email / Customer code</string>
    <string name="enter_password">Password</string>
    <string name="enter_npassword">New Password</string>
    <string name="enter_cpassword">Confirm Password</string>
    <string name="bt_login">Login</string>
    <string name="login_screen_app_logo">login Screen app logo</string>
    <string name="signup_text">SignUp FREE Account set yourself ready to grow wealth in a smarter way!</string>
    <string name="enter_name">Full Name (as per PAN)</string>
    <string name="enter_email">Email ID</string>
    <string name="enter_contact_no">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="open_account">Not have? Open Account</string>
    <string name="open_login">Have Account ? Login</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Get Started</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Fintrack</string>
    <string name="nav_header_subtitle">fintrack@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings and Privacy</string>
    <string name="action_ckyc">Update CKYC</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="nps">NPS</string>
    <string name="insurance">insurance</string>
    <string name="fixed_deposit">Fixed Deposit</string>
    <string name="bonds">Bonds</string>
    <string name="equity_trading">Equity Trading</string>
    <string name="field_required">Required Field</string>
    <string name="email_field_required">Email is Required</string>
    <string name="email_field_valid">Email is not valid</string>
    <string name="email_AlreadyReg">Email Already Registerd</string>
    <string name="mobile_AlreadyReg">Mobile Already Registerd</string>
    <string name="password_field_required">Password is Required</string>
    <string name="old_password_field_match">Password are not Match with old password</string>
    <string name="password_field_match">Password are not Match</string>
    <string name="name_field_required">Name is Required</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="annual_income">Annual Income (In Indian Rupees - INR.)</string>
    <string name="pan_number">PAN Number</string>
    <string name="pan_number_required">PAN Number is Required</string>
    <string name="re_pan_number">Re-Enter PAN Number</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="no_date_of_birth">Nominee Date of Birth (DD/MM/YYYY)</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City/Location</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">Address Line 3</string>
    <string name="pincode">Pincode</string>
    <string name="telephone">Telephone</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="investor_name">Investor Name</string>
    <string name="nominee_name">Nominee Name</string>
    <string name="parent_guardian">Name of Parent / Guardian</string>
    <string name="relationship">Your relationship with the Nominee:</string>
    <string name="Internet_not_found">Internet connection not found.</string>
    <string name="went_wrong">We are sorry, Something went wrong.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="privacy_term">
     "<![CDATA[I/We accept the"
     "<a href="http://fintrackindia.com/term-condition.html" style="color:gray"/> Terms &amp; Conditions </a> and"
     "<a href="http://fintrackindia.com/privacy.html" style="color:gray"/> Privacy Policy </a>"]]>
    </string>
    <string-array name="item_list">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
    </string-array>
    <string-array name="application_type_list">
        <item>Select</item>
        <item>New</item>
        <item>Update</item>
    </string-array>
    <string-array name="bankaccount_type_list">
        <item>Select</item>
        <item>Saving Account</item>
        <item>Current Account</item>
        <item>Other</item>
    </string-array>
    <string-array name="bankaccount_holding_list">
        <item>Select</item>
        <item>Single Account</item>
        <item>Joint Account</item>
    </string-array>
    <string-array name="account_type_list">
        <item>Select</item>
        <item>Normal</item>
        <item>Small</item>
        <item>Simplified</item>
        <item>OTP Based-EKYC</item>
    </string-array>
    <string-array name="prefix_list">
        <item>Select</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Mis.</item>
    </string-array>
    <string-array name="code_list">
        <item>All</item>
        <item>Mutual Fund</item>
        <item>Equity</item>
        <item>Commodity</item>
        <item>PMS</item>
    </string-array>
    <string-array name="gender_list">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="deposit_list">
        <item>Select</item>
        <item>EPF</item>
        <item>PPF</item>
        <item>DEBENTURE</item>
        <item>NSC</item>
        <item>KVP</item>
        <item>BANK DEPOSIT</item>
        <item>COMPANY DEPOSIT</item>
        <item>RD</item>
    </string-array>
    <string-array name="maritals_tatus_list">
        <item>Select</item>
        <item>Married</item>
        <item>UnMarried</item>
    </string-array>
</resources>