<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image1"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteTransparent"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/background_login_image3" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="260dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/login_screen_app_logo"
                    android:src="@drawable/finlogo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_logo"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:autofillHints="@string/app_name"
                    android:importantForAutofill="no"
                    android:shadowColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent">

                    <EditText
                        android:id="@+id/ed_forgot_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz@.0123456789_"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_emai_Customer"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/bt_login_button"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_email"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/background_rectangle"
                    android:fontFamily="@font/lato"
                    android:text="@string/submit"
                    android:textColor="@color/colorPrimary" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>