<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image1"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteTransparent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:indicator="LineScale"
                app:indicator_color="#3078BB" />

            <ImageView
                android:id="@+id/ly_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/background_login_image3" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_above="@+id/ly_fr"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/login_screen_app_logo"
                android:src="@drawable/finlogo" />

            <RelativeLayout
                android:id="@+id/ly_fr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ly_logo"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/app_name"
                    android:importantForAutofill="no"
                    android:shadowColor="@color/colorAccent"
                    android:textColorHint="@color/color_dark_gray">

                    <EditText
                        android:id="@+id/ed_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyz@.0123456789_"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_emai_Customer"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_email"
                    android:layout_gravity="center"
                    android:fontFamily="@font/archivo_narrow_bold"
                    android:importantForAutofill="no"
                    android:textColorHint="@color/color_dark_gray"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent"
                    app:passwordToggleTintMode="src_atop">

                    <EditText
                        android:id="@+id/ed_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_login_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/enter_password"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textPassword"
                        android:shadowColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/text_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_password"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:fontFamily="@font/lato"
                    android:onClick="Onforgot"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_dark_gray" />

                <Button
                    android:id="@+id/bt_login_button"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_forgot"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/background_rectangle"
                    android:fontFamily="@font/lato"
                    android:onClick="OnLogin"
                    android:text="@string/bt_login"
                    android:textColor="@color/color_dark_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bt_login_button"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato"
                    android:onClick="onSignUp"
                    android:padding="10dp"
                    android:text="@string/open_account"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>